[project]
name = "todo-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "Germán Küber",email = "german.kuber@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "langgraph (>=0.3.32,<0.4.0)",
    "langchain-core (>=0.3.55,<0.4.0)",
    "langchain-community (>=0.3.22,<0.4.0)",
    "trustcall (>=0.0.39,<0.0.40)",
    "langchain-openai (>=0.3.14,<0.4.0)",
    "langsmith (>=0.3.33,<0.4.0)",
    "langchain-anthropic (>=0.3.12,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
